@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-23T16:37:59Z",
+  "timestamp" : "2022-09-24T02:42:17Z",
   "count_outdated" : 791,
   "uniques_outdated" : 414,
-  "count" : 819,
+  "count" : 820,
   "uniques" : 429,
   "clones" : [
     {
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-09-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
