@@ -1,3 +1,11 @@
+2022-09-24T02:42:17Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3116766863
+* notice: last 14d: unq all: 2 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 414 791 / 429 819
+* notice: next accum: outdated-unq outdated-all / unq all: 414 791 / 429 820
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-09-23]
+
 2022-09-23T16:37:59Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3114250311
 * notice: last 14d: unq all: 2 28
